--- a/src/app/pages/profile/profile-reads/profile-reads.component.scss
+++ b/src/app/pages/profile/profile-reads/profile-reads.component.scss
@@ -38,3 +38,44 @@
   margin-left: auto;
   margin-right: auto;
 }
+
+.loading-more-indicator {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 2rem;
+  color: var(--mat-subtitle-text-color, rgba(0, 0, 0, 0.6));
+
+  mat-spinner {
+    margin-bottom: 1rem;
+  }
+
+  p {
+    margin: 0;
+    font-size: 0.875rem;
+  }
+}
+
+.no-more-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 2rem;
+  color: var(--mat-subtitle-text-color, rgba(0, 0, 0, 0.6));
+
+  mat-icon {
+    font-size: 32px;
+    height: 32px;
+    width: 32px;
+    margin-bottom: 0.5rem;
+    opacity: 0.5;
+  }
+
+  p {
+    margin: 0;
+    font-size: 0.875rem;
+    opacity: 0.7;
+  }
+}
