feat: Add Zap History link to credentials page and improve zap display component

--- a/src/app/pages/credentials/credentials.component.html
+++ b/src/app/pages/credentials/credentials.component.html
@@ -237,6 +237,25 @@
           <p>No wallets connected. Add your first wallet using the form above.</p>
         </div>
         }
+
+        <!-- Link to Zap History -->
+        <div class="zap-history-link">
+          <mat-card>
+            <mat-card-content>
+              <div class="zap-history-info">
+                <mat-icon class="history-icon">bolt</mat-icon>
+                <div class="history-text">
+                  <h3>View Zap History</h3>
+                  <p>Track all your sent and received lightning payments</p>
+                </div>
+                <button mat-raised-button color="primary" routerLink="/zaps">
+                  <mat-icon>visibility</mat-icon>
+                  View History
+                </button>
+              </div>
+            </mat-card-content>
+          </mat-card>
+        </div>
       </div>
     </mat-tab>
   </mat-tab-group>
