--- a/src/app/components/event/repost-button/repost-button.component.html
+++ b/src/app/components/event/repost-button/repost-button.component.html
@@ -1,39 +1,21 @@
-<button
-  mat-button
-  [ngClass]="{
+<button mat-icon-button [ngClass]="{
     active: !!repostByCurrentAccount(),
-    'only-icon': view() === 'icon' && !reposts().length && !isLoadingReposts(),
-  }"
-  [matMenuTriggerFor]="menu"
-  [disabled]="isLoadingReposts()"
-  (click)="$event.stopPropagation()"
->
+  }" [matMenuTriggerFor]="menu" [disabled]="isLoadingReposts()" (click)="$event.stopPropagation()" matTooltip="Repost"
+  matTooltipPosition="below">
   <mat-icon>repeat</mat-icon>
-  @if (isLoadingReposts()) {
-    <mat-spinner diameter="18"></mat-spinner>
-  } @else if (view() === 'icon') {
-    @if (reposts().length > 0) {
-      {{ reposts().length }}
-    }
-  } @else {
-    Repost
-    @if (reposts().length > 0) {
-      ({{ reposts().length }})
-    }
-  }
 </button>
 
 <mat-menu #menu="matMenu">
   @if (!!repostByCurrentAccount()) {
-    <button mat-menu-item (click)="deleteRepost()">
-      <mat-icon>repeat</mat-icon>
-      <span>Undo Repost</span>
-    </button>
+  <button mat-menu-item (click)="deleteRepost()">
+    <mat-icon>repeat</mat-icon>
+    <span>Undo Repost</span>
+  </button>
   } @else {
-    <button mat-menu-item (click)="createRepost()">
-      <mat-icon>repeat</mat-icon>
-      <span>Repost</span>
-    </button>
+  <button mat-menu-item (click)="createRepost()">
+    <mat-icon>repeat</mat-icon>
+    <span>Repost</span>
+  </button>
   }
   <button mat-menu-item (click)="createQuote()">
     <mat-icon>format_quote</mat-icon>
