--- a/src/app/components/event/event.component.html
+++ b/src/app/components/event/event.component.html
@@ -244,31 +244,44 @@
 
   <mat-card-actions class="note-footer">
     @if (item.event.kind === 1) {
-    <app-reply-button [event]="targetItem.event"></app-reply-button>
-    }
+    <div class="reactions-row">
+      <!-- Reply -->
+      <div class="reaction-group">
+        <app-reply-button [event]="targetItem.event"></app-reply-button>
+        <button mat-button class="count-button" disabled>
+          <span>0</span>
+        </button>
+      </div>
 
-    <!-- @if (app.enabledFeature('beta')) { -->
-    <app-repost-button [event]="targetItem.event"></app-repost-button>
-    <!-- } -->
+      <!-- Repost -->
+      <div class="reaction-group">
+        <app-repost-button [event]="targetItem.event"></app-repost-button>
+        <button mat-button class="count-button" (click)="openReactionsDialog('reposts'); $event.stopPropagation()">
+          <span>0</span>
+        </button>
+      </div>
 
-    @if (item.event.kind === 1) {
-    <button mat-button [ngClass]="{
-            active: !!likeReaction(),
-            'only-icon': !likes().length && !isLoadingReactions(),
-          }" [disabled]="isLoadingReactions()" (click)="toggleLike($event)">
-      <mat-icon>favorite</mat-icon>
-      @if (isLoadingReactions()) {
-      <mat-spinner diameter="18"></mat-spinner>
-      } @else {
-      @if (likes().length > 0) {
-      {{ (likes() || []).length }}
-      }
-      }
-    </button>
+      <!-- Like -->
+      <div class="reaction-group">
+        <button mat-icon-button [ngClass]="{
+                active: !!likeReaction(),
+              }" [disabled]="isLoadingReactions()" (click)="toggleLike($event)">
+          <mat-icon>favorite</mat-icon>
+        </button>
+        <button mat-button class="count-button" (click)="openReactionsDialog('likes'); $event.stopPropagation()">
+          <span>{{ likes().length }}</span>
+        </button>
+      </div>
 
-    <!-- Zap Button -->
-    <app-zap-button [event]="targetItem.event" [recipientPubkey]="targetItem.event.pubkey">
-    </app-zap-button>
+      <!-- Zap -->
+      <div class="reaction-group">
+        <app-zap-button [event]="targetItem.event" [recipientPubkey]="targetItem.event.pubkey">
+        </app-zap-button>
+        <button mat-button class="count-button" (click)="openReactionsDialog('zaps'); $event.stopPropagation()">
+          <span>@if (totalZapAmount() > 0) { {{ formatZapAmount(totalZapAmount()) }} sats } @else { 0 }</span>
+        </button>
+      </div>
+    </div>
     }
 
     <button mat-icon-button class="note-footer-right" (click)="onBookmarkClick($event)">
