--- a/src/app/components/event/event.component.html
+++ b/src/app/components/event/event.component.html
@@ -249,7 +249,7 @@
       <div class="reaction-group">
         <app-reply-button [event]="targetItem.event"></app-reply-button>
         <button mat-button class="count-button" disabled>
-          <span>0</span>
+          <span>...</span>
         </button>
       </div>
 
@@ -257,7 +257,7 @@
       <div class="reaction-group">
         <app-repost-button [event]="targetItem.event"></app-repost-button>
         <button mat-button class="count-button" (click)="openReactionsDialog('reposts'); $event.stopPropagation()">
-          <span>{{ reposts().length }}</span>
+          <span>{{ repostCount() }}</span>
         </button>
       </div>
 
