--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -36,6 +36,7 @@ nav {
 }
 
 @media (display-mode: window-controls-overlay) {
+
   /** This is for when the app is running in a window with custom title bar controls. */
   .app-container {
     padding-top: env(titlebar-area-height, 33px);
@@ -50,8 +51,7 @@ nav {
   /* Prevent horizontal scrolling */
 
   // Make space for mobile nav when on mobile
-  @media (max-width: 599px) {
-  }
+  @media (max-width: 599px) {}
 }
 
 // Configure mat-sidenav-content to be a flex container
@@ -238,6 +238,12 @@ mat-sidenav-content {
   z-index: 1001; // Ensure the drawer itself also has high z-index
 }
 
+@media (display-mode: window-controls-overlay) {
+  .profile-sidenav {
+    margin-top: env(titlebar-area-height, 33px);
+  }
+}
+
 // Ensure the sidenav container doesn't resize when profile sidenav opens
 .sidenav-container.mat-sidenav-container {
   transform: none !important;
@@ -301,9 +307,7 @@ mat-sidenav-content {
   font-size: 64px;
   height: 64px;
   width: 64px;
-  color: var(
-    --mat-card-title-text-color
-  ); // Changed from fixed white color to theme-dependent variable
+  color: var(--mat-card-title-text-color); // Changed from fixed white color to theme-dependent variable
 }
 
 .profile-header h2 {
@@ -451,8 +455,7 @@ mat-sidenav-content {
   90% {
     opacity: 1;
     transform: scale(1) rotate(360deg);
-    border-color: var(--mat-sys-primary) var(--mat-sys-primary) var(--mat-sys-primary)
-      var(--mat-sys-primary);
+    border-color: var(--mat-sys-primary) var(--mat-sys-primary) var(--mat-sys-primary) var(--mat-sys-primary);
   }
 
   100% {
