fix: Adjust margin for media player icon for improved layout

--- a/src/app/components/media-player/media-player.component.scss
+++ b/src/app/components/media-player/media-player.component.scss
@@ -58,7 +58,8 @@
 
 .media-player-icon {
   margin-left: 4px;
-  margin-right: 8px;
+  margin-right: 4px;
+  margin-top: -1px;
 }
 
 .media-player-controls {
