--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,11 @@
 
 html {
   --mat-success-color: #4caf50;
+  /* Bitcoin / zap color used across the app */
+  --nostria-bitcoin: #ff6b1a;
+  --nostria-bitcoin-rgb: 255, 107, 26;
+  /* rgb parts for rgba usage */
+  --nostria-bitcoin-10: rgba(var(--nostria-bitcoin-rgb), 0.1);
   --mat-success-lighter: #c8e6c9;
   --mat-success-darker: #2e7d32;
 
@@ -11,17 +16,13 @@ html {
   --scrollbar-thumb: #c1c1c1;
   --scrollbar-thumb-hover: #a1a1a1;
 
-  @include mat.theme(
-    (
-      color: (
-        theme-type: light,
+  @include mat.theme((color: (theme-type: light,
         primary: nostria-theme.$primary-palette,
         tertiary: nostria-theme.$tertiary-palette,
       ),
       typography: Roboto,
       density: 0,
-    )
-  );
+    ));
 }
 
 .dark {
@@ -34,14 +35,10 @@ html {
   --scrollbar-thumb: #686868;
   --scrollbar-thumb-hover: #7e7e7e;
 
-  @include mat.theme(
-    (
-      color: (
-        theme-type: dark,
+  @include mat.theme((color: (theme-type: dark,
         primary: nostria-theme.$primary-palette,
       ),
-    )
-  );
+    ));
 }
 
 // Global styles
